@@ -1740,6 +1740,12 @@ rsvg_property_bag_size (RsvgPropertyBag *bag)
 }
 
 void 
+rsvg_property_bag_enumerate (RsvgPropertyBag * bag, RsvgPropertyBagEnumFunc func, gpointer user_data)
+{
+	g_hash_table_foreach (bag->props, (GHFunc)func, user_data);
+}
+
+void 
 rsvg_state_clip_path_assure(RsvgHandle * ctx)
 {
 	ArtSVP * tmppath;
